ExtFiles: added check-API
This new API allows the user to check whether a given file can be
placed on a given node by checking if the file-path is whitelisted.
