# controller/src/main/java/com/linbit/linstor/api/rest/v1/serializer/JsonGenTypes.java
@@ -1800,6 +1800,12 @@ public class JsonGenTypes
         public String content;
     }
 
+    @JsonInclude(JsonInclude.Include.NON_EMPTY)
+    public static class ExtFileCheckResult
+    {
+        public Boolean allowed;
+    }
+
     /**
      * ToggleDisk optional payload data
      */
